--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,7 +1,7 @@
 <footer class="bg-near-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="{{ .Site.BaseURL }}" >
-    {{ .Site.Title }}, {{ now.Format "2006" }}. Please feel free to use this if you like.
+    {{ .Site.Title }}, {{ now.Format "2006" }}. Please feel free to use these messages.
   </a>
   {{ partial "social-follow.html" . }}
   </div>
